@@ -11,6 +11,8 @@ Version 1.5.4+svn:
    * Fixed the list of the unit's attacks getting cut off in the right panel
      (bug #12297).
    * Fixed wesnoth not to try to add duplicate ids to unit_map
+   * Fixed a bug where the old unit type's abilities and attacks weren't   
+     completely cleared during level-up
 
 Version 1.5.4:
  * Editor2:
